<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="150dp"
        tools:layout_editor_absoluteY="184dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Student: "
                    android:textColor="@color/yellow"
                    android:textSize="20sp"/>
                <TextView
                    android:id="@+id/student_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/student_name_loading"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Problem: "
                    android:textColor="@color/yellow"
                    android:textSize="20sp"/>
                <TextView
                    android:id="@+id/problem_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/student_name_loading"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"/>
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/statusList"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:layout_editor_absoluteX="151dp"
                tools:layout_editor_absoluteY="176dp"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/submissionId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="Select a submission listed above"/>

            <TextView
                android:id="@+id/statusName"
                android:textSize="30sp"
                android:layout_marginVertical="10dp"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/languageName"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/runtime"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="32dp"
                android:textColor="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/audio_description"
                    android:text="@string/audio_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button_start_audio"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/dikastis"
                        android:text="@string/start"
                        android:layout_marginBottom="32dp"/>

                    <Button
                        android:id="@+id/button_pause_resume_audio"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:backgroundTint="@color/red"
                        android:text="@string/pause"
                        android:layout_marginBottom="32dp"/>

                    <Button
                        android:id="@+id/button_stop_audio"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:backgroundTint="@color/red"
                        android:text="@string/stop"
                        android:layout_marginBottom="32dp"/>

                </LinearLayout>

                <Button
                    android:id="@+id/button_share_audio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/red"
                    android:text="@string/share"
                    android:layout_marginBottom="32dp"/>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>